--- a/Losing Weight In Healthy Way.html
+++ b/Losing Weight In Healthy Way.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 	<h1>Losing Weight In Healthy Way<br></h1>
-	<p>Obesity continues to be a serious problem and is predicted to reach epidemic levels.</p>	<p>One way to prevent this scenario is to make people aware of the risks of being overweight or obese.</p> 	<p>Here are some diseases that you are putting yourself in risk of if you are carrying a lot of extra pounds:-</p> 
+	<p>Obesity continues to be a serious problem and is predicted to reach epidemic levels.</p>
+
+	<p>One way to prevent this scenario is to make people aware of the risks of being overweight or obese.</p> 
+
+	<p>Here are some diseases that you are putting yourself in risk of if you are carrying a lot of extra pounds:-</p> 
 
 	<p><li>heart disease</li>
 	<li>stroke</li>
@@ -45,12 +49,14 @@ Eating more frequently, and in small servings, can prevent overeating. This will
 			<p><li>Exercise</li>
 			Walk a few blocks from home, take the stairs instead of the elevator and doing home chores if you are too lazy to go to the gym and take exercise classes. Make sure that you do this regularly. Click the survey on <a href="surveyform.html">Activities Spent In Per Day</a></p>
 
-<p><img src="images/exercise.jpg" width="480" height="315" alt="exercise"</p>		
+<p>img src="images/exercise.jpg" width="480" height="315" alt="exercise"</p>		
 
 
 		</ol>
 	<h2>Conclusion</h2>
-	<p>It does not matter how much weight you plan or need to lose. What is important is that you set realistic goals for yourself.</p> 	<p><em><strong>Eat healthy, drink lots of water, have enough sleep and exercise.</em></strong> This will give you a higher chance of losing weight and improving your health, which would result in a new, healthier you.</p> 
+	<p>It does not matter how much weight you plan or need to lose. What is important is that you set realistic goals for yourself.</p> 
+
+	<p><em><strong>Eat healthy, drink lots of water, have enough sleep and exercise.</em></strong> This will give you a higher chance of losing weight and improving your health, which would result in a new, healthier you.</p> 
 
 
 </body>
