revised style for html

--- a/Losing Weight In Healthy Way.html
+++ b/Losing Weight In Healthy Way.html
@@ -26,30 +26,32 @@
 
 	<p>
 		<ol>
-			<li>Do not starve yourself</li>
+			<li><strong>Do not starve yourself</li></strong>
 			The key to a healthier way of losing weight is: Do not diet.<br>
 
-			<p><li>Start your day right</li>
+			<p><li><strong>Start your day right</li></strong>
 			Breakfast is the most important meal of the day. Have a healthy meal in the morning to jump-start your metabolism.<br></p>
 
-			<p><li>Eat small, healthy meals frequently</li>
-Eating more frequently, and in small servings, can prevent overeating. This will also increase your metabolism and make calories burn faster.<br></p>
+			<p><li><strong>Eat small, healthy meals frequently</li></strong>
+			Eating more frequently, and in small servings, can prevent overeating. This will also increase your metabolism and make calories burn faster.<br></p>
  
-			<p><li>Decide on how much weight you want to lose</li>
+			<p><li><strong>Decide on how much weight you want to lose</li></strong>
 			Keep your goals realistic. Have a mindset that you want to eat healthy to stay healthy for the rest of your life.<br></p>
 
-			<p><li>Drink lots of water</li>
+			<p><li><strong>Drink lots of water</li></strong>
 			Your body needs sufficient water to burn fat and keep your cells hydrated and healthy.<br></p>
  
-			<p><li>Avoid too much sugar</li>
+			<p><li><strong>Avoid too much sugar</li></strong>
 			Plan your meals around lots of fruits and vegetables, some bread, rice or pasta for that carbo fix that you need, plus lean meat and protein rich-foods. Sweets, sodas and pastries should be once-in-a-while indulgences only.<br></p>
 
-			<p><li>Watch your fat intake</li>
+			<p><li><strong>Watch your fat intake</strong></li>
 			Fat is not the culprit to being overweight. You need this to keep your weight at the proper level.<br></p>
-			<p><li>Exercise</li>
-			Walk a few blocks from home, take the stairs instead of the elevator and doing home chores if you are too lazy to go to the gym and take exercise classes. Make sure that you do this regularly. Click the survey on <a href="surveyform.html">Activities Spent In Per Day</a></p>
 
-<p>img src="images/exercise.jpg" width="480" height="315" alt="exercise"</p>		
+			<p><li><strong>Exercise</strong></li>
+			Walk a few blocks from home, take the stairs instead of the elevator and doing home chores if you are too lazy to go to the gym and take exercise classes. Make sure that you do this regularly. 
+			<br><em>Click the survey on <a href="surveyform.html">Activities Spent In Per Day</a></em></p>
+			
+			<p><img src="images/exercise.jpg" width="480" height="315" alt="exercise"</p>	
 
 
 		</ol>
